--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>胰島素補打計算器</title>
+<title>手機優化胰島素補打計算器</title>
 <style>
   body { font-family: Arial, sans-serif; padding: 10px; background: #f5f5f5; }
   h1 { text-align: center; font-size: 1.5em; margin-bottom: 15px; }
   .section { margin-bottom: 20px; padding: 15px; border-radius: 10px; background: #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
   label { display: block; margin-top: 10px; font-size: 1em; }
   input[type=number], select { width: 100%; padding: 8px; margin-top: 5px; box-sizing: border-box; font-size: 1em; }
-  input[type=range] { width: 70%; }
-  .slider-wrapper { display: flex; align-items: center; margin-top: 10px; }
-  .slider-wrapper input[type=number] { width: 30%; margin-left: 10px; padding: 5px; }
+  input[type=range] { width: 100%; height: 40px; margin-top: 5px; }
   .result { margin-top: 10px; font-weight: bold; color: #333; font-size: 1em; }
 </style>
 </head>
 <body>
-<h1>胰島素補打計算器</h1>
+<h1>手機優化胰島素補打計算器</h1>
 
 <!-- 第一部分：計算 ISF / ICR -->
 <div class="section">
@@ -32,19 +30,15 @@
   <div class="result" id="step1Result"></div>
 </div>
 
-<!-- 滑桿區 + 直接輸入 -->
+<!-- 滑桿區 -->
 <div class="section">
   <h3>滑桿調整 ISF / ICR</h3>
-  <div class="slider-wrapper">
-    <label>矯正因子 ISF (mg/dL per U)</label>
-    <input type="range" id="isfSlider" min="5" max="200" step="1" oninput="syncISF(); calcCorrection();">
-    <input type="number" id="isfInput" min="5" max="200" step="1" oninput="syncISF(); calcCorrection();">
-  </div>
-  <div class="slider-wrapper">
-    <label>碳水比 ICR (g per U)</label>
-    <input type="range" id="icrSlider" min="5" max="50" step="1" oninput="syncICR(); calcCorrection();">
-    <input type="number" id="icrInput" min="5" max="50" step="1" oninput="syncICR(); calcCorrection();">
-  </div>
+  <label>矯正因子 ISF (mg/dL per U)
+    <input type="range" id="isfSlider" min="5" max="200" step="1" oninput="updateISF(); calcCorrection();">
+  </label>
+  <label>碳水比 ICR (g per U)
+    <input type="range" id="icrSlider" min="5" max="50" step="1" oninput="updateICR(); calcCorrection();">
+  </label>
 </div>
 
 <!-- 第二部分：補打速效計算 -->
@@ -69,29 +63,23 @@ function calcISFICR() {
     ISF = Math.floor(isfConst / tdd);
     ICR = Math.floor(icrConst / tdd);
 
-    // 更新滑桿與輸入框
+    // 更新滑桿
     document.getElementById("isfSlider").value = ISF;
-    document.getElementById("isfInput").value = ISF;
     document.getElementById("icrSlider").value = ICR;
-    document.getElementById("icrInput").value = ICR;
 
     document.getElementById("step1Result").innerHTML =
-      `👉 ISF：1 U ≈ 降 <b>${ISF}</b> mg/dL<br>👉 ICR：1 U ≈ 代謝 <b>${ICR}</b> g 碳水`;
+      `👉 ISF：1 U ≈ 降 <b>${ISF}</b> mg/dL<br>👉 ICR：1 U ≈ 可處理 <b>${ICR}</b> g 碳水`;
 
     calcCorrection();
   }
 }
 
-function syncISF() {
-  const val = parseFloat(document.getElementById("isfSlider").value);
-  document.getElementById("isfInput").value = val;
-  ISF = val;
+function updateISF() {
+  ISF = parseFloat(document.getElementById("isfSlider").value);
 }
 
-function syncICR() {
-  const val = parseFloat(document.getElementById("icrSlider").value);
-  document.getElementById("icrInput").value = val;
-  ICR = val;
+function updateICR() {
+  ICR = parseFloat(document.getElementById("icrSlider").value);
 }
 
 function calcCorrection() {
@@ -116,7 +104,7 @@ function calcCorrection() {
      ✅ 建議補打速效總劑量：<b>${totalDose}</b> U`;
 }
 
-// 初始化
+// 初始化滑桿與計算
 calcISFICR();
 </script>
 </body>
