--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   input[type=number], select { width: 100%; padding: 8px; margin-top: 5px; box-sizing: border-box; font-size: 1em; }
   input[type=range] { width: 100%; height: 40px; margin-top: 5px; }
   .result { margin-top: 10px; font-weight: bold; color: #333; font-size: 1em; }
+  .slider-value { font-weight: bold; margin-left: 5px; }
 </style>
 </head>
 <body>
@@ -35,77 +36,15 @@
   <h3>滑桿調整 ISF / ICR</h3>
   <label>矯正因子 ISF (mg/dL per U)
     <input type="range" id="isfSlider" min="5" max="200" step="1" oninput="updateISF(); calcCorrection();">
+    <span class="slider-value" id="isfValue">0</span> U
   </label>
   <label>碳水比 ICR (g per U)
     <input type="range" id="icrSlider" min="5" max="50" step="1" oninput="updateICR(); calcCorrection();">
+    <span class="slider-value" id="icrValue">0</span> g
   </label>
 </div>
 
 <!-- 第二部分：補打速效計算 -->
 <div class="section">
   <h3>二、補打速效胰島素計算</h3>
-  <label>目前血糖 (mg/dL)：<input type="number" id="currentBG" oninput="calcCorrection()"></label>
-  <label>目標血糖 (mg/dL)：<input type="number" id="targetBG" value="100" oninput="calcCorrection()"></label>
-  <label>碳水量 (g)：<input type="number" id="carbs" oninput="calcCorrection()"></label>
-  <div class="result" id="step2Result"></div>
-</div>
-
-<script>
-let ISF = 0;
-let ICR = 0;
-
-function calcISFICR() {
-  const tdd = parseFloat(document.getElementById("tdd").value);
-  const rule = document.getElementById("ruleSelect").value;
-  if (!isNaN(tdd) && tdd > 0) {
-    const isfConst = rule === "1800/500" ? 1800 : 1500;
-    const icrConst = rule === "1800/500" ? 500 : 450;
-    ISF = Math.floor(isfConst / tdd);
-    ICR = Math.floor(icrConst / tdd);
-
-    // 更新滑桿
-    document.getElementById("isfSlider").value = ISF;
-    document.getElementById("icrSlider").value = ICR;
-
-    document.getElementById("step1Result").innerHTML =
-      `👉 ISF：1 U ≈ 降 <b>${ISF}</b> mg/dL<br>👉 ICR：1 U ≈ 可處理 <b>${ICR}</b> g 碳水`;
-
-    calcCorrection();
-  }
-}
-
-function updateISF() {
-  ISF = parseFloat(document.getElementById("isfSlider").value);
-}
-
-function updateICR() {
-  ICR = parseFloat(document.getElementById("icrSlider").value);
-}
-
-function calcCorrection() {
-  if (ISF <= 0 || ICR <= 0) return;
-
-  const currentBG = parseFloat(document.getElementById("currentBG").value);
-  const targetBG = parseFloat(document.getElementById("targetBG").value);
-  const carbs = parseFloat(document.getElementById("carbs").value);
-
-  if (isNaN(currentBG) || isNaN(targetBG) || isNaN(carbs)) {
-    document.getElementById("step2Result").innerHTML = '';
-    return;
-  }
-
-  let correctionDose = currentBG > targetBG ? (currentBG - targetBG)/ISF : 0;
-  let mealDose = carbs/ICR;
-  let totalDose = Math.floor(correctionDose + mealDose);
-
-  document.getElementById("step2Result").innerHTML =
-    `👉 高血糖修正劑量：${correctionDose.toFixed(1)} U<br>
-     👉 餐點劑量：${mealDose.toFixed(1)} U<br>
-     ✅ 建議補打速效總劑量：<b>${totalDose}</b> U`;
-}
-
-// 初始化滑桿與計算
-calcISFICR();
-</script>
-</body>
-</html>
+  <label>目前血糖 (mg/dL)：<input type="number" id="cur
